@@ -1,3 +1,5 @@
+- use "versioned" media_info files
+  (needed for aria2 to handle mirrors not having some media_info/*)
 - urpmi.addmedia:
   o --distrib: do not skip "debug_for=" media
     (debug media will be added with flag "ignore" if noauto=1)
